--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             </div>
                         </div>
 
-                        <div class="tab-pane fade h-100" id="settings-tab" role="tabpanel" aria-labelledby="settings-tab-btn" style="padding-right: 1200px;">
+                        <div class="tab-pane fade h-100" id="settings-tab" role="tabpanel" aria-labelledby="settings-tab-btn">
                             <h5 class="card-title text-white mb-4">Data Management</h5>
                             
                             <div class="mb-4">
@@ -958,4 +958,5 @@
         });
     </script>
 </body>
+
 </html>
