--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         .event-loss {
             background-color: var(--fc-bg-event-loss);
             border-color: var(--fc-bg-event-loss);
-            color: black; 
+            color: #fff; 
         }
 
         .event-neutral {
@@ -1202,3 +1202,4 @@ function initializeCalendar(dailySummary) {
 </body>
 
 </html>
+
